<resources>
    <string name="app_name">Anti Theft Alarm</string>
    <string name="anti_theft_alarm_app">Anti Theft Alarm App</string>
    <string name="lets_go">Lets GO</string>
    <string name="anti_theft">Anti Theft</string>
    <string name="anti_theft_1">Anti Theft</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more">More</string>
    <string name="nav_open" />
    <string name="nav_close" />
    <string name="anti_theft_2">Anti Theft</string>
    <string name="anti_theft_3">Anti Theft</string>
    <string name="share_1">Share</string>
    <string name="anti_theft_4">Anti Theft</string>
    <string name="share_2">Share App</string>
    <string name="privacy_policy_1">Privacy Policy</string>
    <string name="rate_us_1">Rate Us</string>
    <string name="more_1">More</string>
    <string name="thank_you">THANK  YOU</string>
    <string name="would_you_like_to_rate_us">Would you like to Rate Us?</string>
    <string name="not_now">Not Now</string>
    <string name="settings">Settings</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="adjust_alarm_sound">Adjust Alarm Sound</string>
    <string name="set_alarm_tone">Set Alarm Tone</string>
    <string name="alarm_duration">Alarm Duration</string>
    <string name="pin_code_setting">Pin Code Setting</string>
    <string name="select_alarm_tone">Select Alarm Tone</string>
    <string name="select_alarm_duration">Select Alarm Duration</string>
    <string name="tone_a">Tone A</string>
    <string name="tone_b">Tone B</string>
    <string name="tone_c">Tone C</string>
    <string name="tone_d">Tone D</string>
    <string name="tone_e">Tone E</string>
    <string name="tone_f">Tone F</string>
    <string name="tone_g">Tone G</string>
    <string name="select">SELECT</string>
    <string name="five_sec">5 sec</string>
    <string name="ten_sec">10 sec</string>
    <string name="fifteen_sec">15 sec</string>
    <string name="twenty_sec">20 sec</string>
    <string name="twenty_five">25 sec</string>
    <string name="thirty_sec">30 sec</string>
    <string name="pin_code_setting_1">PIN Code Setting</string>
    <string name="stop_alarm_with_pin_code">Stop Alarm With PIN Code</string>
    <string name="change_pin_code">Change PIN Code</string>
    <string name="current_pin_code">Current Pin Code</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="hidden_pin">****</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="ok">OK</string>
    <string name="_0">0</string>
    <string name="reenter_the_pin">Re-enter the Pin</string>
    <string name="intruder_alert">Intruder Alert</string>
    <string name="take_selfie_when_someone_enters_wrong_password">Take selfie when someone enters wrong password</string>
    <string name="motion_detect_alarm">Motion Detect Alarm</string>
    <string name="alarm_when_your_phone_is_moved">Alarm when your phone is moved</string>
    <string name="anti_pocket_detect_alarm">Anti Pocket Detect Alarm</string>
    <string name="alarm_when_removed_from_pocket">Alarm when removed from pocket</string>
    <string name="charger_detect_alarm">Charger Detect Alarm</string>
    <string name="alarm_when_charger_is_unplugged">Alarm when charger is unplugged</string>
    <string name="advertisement_1">Advertisement</string>
    <string name="advertisement">Advertisement</string>
    <string name="wifi_state_change_detect_alarm">Wifi State Change Detect Alarm</string>
    <string name="alarm_when_someone_try_to_on_off_wifi">Alarm when someone try to on/off wifi</string>
    <string name="full_battery_detect_alarm">Full Battery Detect Alarm</string>
    <string name="alarm_when_battery_fully_charged">Alarm when Battery fully charged</string>
    <string name="motion_detect_alarm_1">Motion Detect Alarm</string>
    <string name="advertisement_2">Advertisement</string>
    <string name="activate">Activate</string>
    <string name="tap_to_start">Tap to Start</string>
    <string name="flash_light">Flash Light</string>
    <string name="turn_on_flash_while_ringing">Turn On Flash While Ringing</string>
    <string name="vibrate">Vibrate</string>
    <string name="key_selected_sound">selected_sound_key</string>
    <string name="vibrate_while_ringing">Vibrate While Ringing</string>
    <string name="for_best_result_always_turn_on_vibration_when_you_are_in_crowded_areas_also_turn_on_flash_light_at_night">For best result always turn on Vibration \nwhen you are in crowded areas \nand also turn on flash light at night</string>
    <string name="activating_please_wait">Activating. Please Wait.</string>
    <string name="stop">Stop</string>
    <string name="key_seekbar_progress">key_bar\n</string>
    <string name="key_selected_duration">sound_duration\n</string>
    <string name="anti_pocket_detect_alarm_1">Anti Pocket Detect Alarm</string>
    <string name="charger_disconnected_alarm">Charger Disconnected Alarm</string>
    <string name="full_battery_detect">Full Battery Detect</string>
    <string name="wifi_change_detect_alarm">Wifi Change Detect Alarm</string>
    <string name="intruder_setting">Intruder Settings</string>
    <string name="take_photo_of_intruder_on_wrong_pin">Take Photo Of Intruder on WRONG PIN</string>
    <string name="advertisement_3">Advertisement</string>
    <string name="intruder">Intruder Alert</string>
    <string name="if_someone_enters_the_wrong_password_the_snooper_s_photo_will_be_taken_and_saved_here">If someone enters the wrong password, the snooper\'s photo will be taken and saved here</string>
    <string name="intruders_photo_list">Intruders Photo List</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="facebook">Facebook</string>
    <string name="alarm">Alarm</string>
    <string name="motion_detect">Motion Detect</string>
    <string name="alarm_1">Alarm</string>
    <string name="anti_pocket_detect">Anti Pocket Detect</string>
    <string name="charger_detect">Charger Detect</string>
    <string name="wifi_state_detect">wifi State Detect</string>
    <string name="full_battery_detect_1">Full Battery Detect</string>
    <string name="choose_alarm_duration">Choose Alarm Duration</string>
    <string name="alarm_tone">Alarm Tone</string>
    <string name="choose_alarm_tone">Choose Alarm Tone</string>
    <string name="adjust_pin_code_setting">Adjust Pin Code Setting</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="set_updated_pin_code">Set Updated Pin Code</string>
</resources>