<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/alarm_duration_icon_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/alarm_duration_card_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="26dp"/>

    <TextView
        android:id="@+id/select_alarm_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/select_alarm_duration"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/alarm_duration_icon_1"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/duration_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/select_alarm_duration"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/five_sec_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="22dp"
            />

        <RadioButton
            android:id="@+id/ten_sec_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginStart="25dp"
            />

        <RadioButton
            android:id="@+id/fifteen_sec_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="22dp"
            />

        <RadioButton
            android:id="@+id/twenty_sec_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="32dp"
            />

        <RadioButton
            android:id="@+id/twenty_five_sec_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="22dp"
            />

        <RadioButton
            android:id="@+id/thirty_sec_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="22dp"
            />

    </RadioGroup>

    <TextView
        android:id="@+id/five_sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/five_sec"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_alarm_duration" />

    <TextView
        android:id="@+id/ten_sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="106dp"
        android:text="@string/ten_sec"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_alarm_duration" />

    <TextView
        android:id="@+id/fifteen_sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:text="@string/fifteen_sec"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_alarm_duration" />

    <TextView
        android:id="@+id/twenty_sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="254dp"
        android:text="@string/twenty_sec"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="80dp"
        app:layout_constraintTop_toBottomOf="@+id/select_alarm_duration" />

    <TextView
        android:id="@+id/twenty_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:text="@string/twenty_five"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="80dp"
        app:layout_constraintTop_toBottomOf="@+id/select_alarm_duration" />

    <TextView
        android:id="@+id/thirty_sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="395dp"
        android:text="@string/thirty_sec"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="80dp"
        app:layout_constraintTop_toBottomOf="@+id/select_alarm_duration" />

    <TextView
        android:id="@+id/select_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/select"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:layout_marginTop="440dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/thirty_sec"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>