<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/anti_theft_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_marginStart="20dp"
        android:text="@string/anti_theft_4"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/share_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/share_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/share_icon_drawer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="266dp"/>

    <TextView
        android:id="@+id/share_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="266dp"
        android:text="@string/share_2"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="13sp"
        android:layout_marginEnd="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/share_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/privacy_policy_drawer_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="330dp"/>

    <TextView
        android:id="@+id/privacy_policy_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="100dp"
        android:text="@string/privacy_policy_1"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/privacy_policy"
        app:layout_constraintTop_toBottomOf="@+id/share_2" />

    <ImageView
        android:id="@+id/rate_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rate_us_drawer_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="390dp"/>

    <TextView
        android:id="@+id/rate_us_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/rate_us_1"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_marginEnd="132dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rate_us"
        app:layout_constraintTop_toBottomOf="@+id/privacy_policy_1" />



</androidx.constraintlayout.widget.ConstraintLayout>